# open-product

./: README.markdown  extensible.cabal  open-product.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Extensible.hs  Product.hs
src/Data/Extensible/: Product.hs  Sum.hs
src/Data/Extensible/Product/: Internal.hs
src/Data/Extensible/Sum/: Internal.hs
test/: Main.hs  ProductSpecs.hs  SumSpecs.hs
