cabal-version:      3.0
name:               extensible
version:            0.1.0.0
synopsis:           Extensible Data
description:        Extensible Data by using type system to encode the extra information.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mrjt Jmn
maintainer:         meritamen@sdf.org
category:           Data
build-type:         Simple
tested-with:        GHC==9.8.2, GHC==9.6.4, GHC==9.4.8

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Extensible
                    , Data.Extensible.Sum
    other-modules:    Data.Extensible.Sum.Internal
    build-depends:    base >=4.17.2.0 && < 5
                    , first-class-families ^>= 0.8.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite extensible-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    SumSpecs
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base >=4.17.2.0 && < 5
                    , extensible
                    , hspec
                    , tasty
                    , tasty-hspec
